[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Pontuacao" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.0
margin_right = 238.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
percent_visible = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensagem" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.396
anchor_right = 0.5
anchor_bottom = 0.396
margin_left = -148.881
margin_top = -33.6043
margin_right = 505.119
margin_bottom = 39.3957
custom_fonts/font = SubResource( 1 )
text = "Desvie dos montros!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.541
anchor_right = 0.5
anchor_bottom = 0.541
margin_left = -83.3981
margin_top = -39.52
margin_right = 117.602
margin_bottom = 39.48
custom_fonts/font = SubResource( 1 )
text = "Iniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerMensagem" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="TimerMensagem" to="." method="_on_TimerMensagem_timeout"]
